--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="hero-content-wrapper">
                 <h2 class="mb-30 wow fadeInUp" data-wow-delay=".2s">El bienestar de su quipo es nuestra prioridad</h2>
                 <p class="mb-30 wow fadeInUp" data-wow-delay=".4s">Contamos con servicios profesionales de mantenimiento en computadoras, impresoras personales y consolas de videojuegos.</p>
-                <a href="#contact" class="button button-lg radius-50 wow fadeInUp" data-wow-delay=".6s">Contáctenos <i class="lni lni-chevron-right"></i> </a>
+                <a href="#contactos" class="button button-lg radius-50 wow fadeInUp" data-wow-delay=".6s">Contáctanos <i class="lni lni-chevron-right"></i> </a>
               </div>
             </div>
             <div class="col-lg-6 align-self-end">
